# horizon

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PHASE_B01_CORRECTIONS.md  PHASE_B01_SUMMARY.md  README.md  docker-compose.yml  release.config.mjs
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  clippy.yml  coverage.yml  release.yml  test.yml
crates/auth/: Cargo.toml
crates/auth/benches/: password_benches.rs
crates/auth/src/: jwt.rs  lib.rs  mfa.rs  mod.rs  password.rs  permissions.rs  permissions_tests.rs  roles.rs
crates/auth/tests/: integration_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  server.rs
crates/cli/src/commands/: completions.rs  migrate.rs  mod.rs  validate.rs
crates/cli/src/config/: mod.rs
crates/cli/src/tls/: mod.rs
crates/entity/: Cargo.toml
crates/entity/src/: api_key_usage_log.rs  api_keys.rs  lib.rs  prelude.rs  refresh_tokens.rs  roles.rs  sea_orm_active_enums.rs  system_settings.rs  team_members.rs  teams.rs  user_roles.rs  user_sessions.rs  users.rs
crates/entity/tests/: enum_tests.rs
crates/error/: Cargo.toml
crates/error/src/: codes.rs  lib.rs  middleware.rs  rejection.rs  response.rs  traits.rs
crates/error/tests/: error_tests.rs
crates/logging/: Cargo.toml
crates/logging/src/: config.rs  lib.rs  macros.rs  request_id.rs
crates/logging/tests/: logging_tests.rs
crates/migration/: Cargo.toml
crates/migration/src/: cuid2_functions.sql  db.rs  lib.rs  m00000000_000000_create_cuid_function.rs  m20250203_000001_create_users_table.rs  m20250203_000002_create_teams_table.rs  m20250203_000003_create_team_members_table.rs  m20260203_000000_enable_pgcrypto.rs  m20260203_000001_create_users_table.rs  m20260203_0000025_add_teams_parent_fk.rs  m20260203_000002_create_teams_table.rs  m20260203_000003_create_team_members_table.rs  m20260203_000004_add_teams_manager_fk.rs  m20260203_000005_create_roles_table.rs  m20260203_000006_create_user_roles_table.rs  m20260203_000007_create_api_keys_table.rs  m20260203_000008_create_refresh_tokens_table.rs  m20260204_000009_create_user_sessions_table.rs  m20260205_000001_add_updated_at_triggers.rs  m20260207_000001_add_mfa_and_lockout_columns.rs  m20260207_000002_create_api_key_usage_log_table.rs  m20260213_000001_create_system_settings_table.rs  m20260214_000001_alter_users_table.rs  main.rs  migrator.rs
crates/migration/src/migrators/: m20260202_init.rs  mod.rs
crates/migration/src/seeds/: mod.rs
crates/permissions-macro/: Cargo.toml
crates/permissions-macro/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  refresh_tokens.rs  settings.rs  token_blacklist.rs  utils.rs
crates/server/src/auth/: api_keys.rs  handlers.rs  jwt.rs  mfa.rs  mod.rs  permissions.rs  roles.rs  sessions.rs  sessions_tests.rs  teams.rs  users.rs
crates/server/src/dto/: api_keys.rs  auth.rs  mfa.rs  mod.rs  teams.rs  users.rs
crates/server/src/middleware/: api_key_auth.rs  auth.rs  mod.rs  permissions.rs  rate_limit.rs  security_headers.rs
crates/server/src/router/: mod.rs
crates/server/tests/: api_key_tests.rs  integration_auth.rs  integration_handlers.rs  integration_mfa.rs  middleware_tests.rs  server_utils_tests.rs  team_permissions.rs  token_tests.rs
crates/server/tests/common/: mod.rs
crates/ui/: .gitignore  components.json  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
crates/ui/src/: app.tsx  main.tsx  router.tsx
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ui/src-tauri/src/: main.rs
crates/ui/src/assets/: style.css
crates/ui/src/components/health/: HealthStatusIndicator.tsx
crates/ui/src/components/layout/: MainLayout.tsx  Sidebar.tsx
crates/ui/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  label.tsx  password-strength.tsx  select.tsx  sonner.tsx  tabs.tsx
crates/ui/src/context/: AuthContext.tsx
crates/ui/src/hooks/: useApi.ts  useTheme.tsx
crates/ui/src/lib/: api-error.ts  api.ts  toast.ts
crates/ui/src/pages/: AgentsPage.tsx  DashboardPage.tsx
crates/ui/src/pages/auth/: LoginPage.tsx  MfaVerifyPage.tsx  SetupPage.tsx
crates/ui/src/pages/profile/: ProfilePage.tsx
crates/ui/src/pages/settings/: NotificationsPage.tsx  SettingsPage.tsx  TeamsPage.tsx  UsersPage.tsx
crates/ui/src/routes/: 404.tsx  __root.tsx  index.tsx  login.tsx  mfa-verify.tsx  setup.tsx
crates/ui/src/routes/dashboard/: agents.tsx  index.tsx  route.tsx
crates/ui/src/routes/dashboard/profile/: index.tsx
crates/ui/src/routes/dashboard/settings/: index.tsx  notifications.tsx  teams.tsx  users.tsx
docs/: docker-setup.md
scripts/: check-db.sh  docker-dev.sh  generate-entities.sh  run-clippy.sh  run-coverage.sh  run-test.sh  run_coverage.sh
