[package]
edition = "2024"
name = "auth"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# Random generation
rand = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Secret handling
secrecy = { workspace = true }

# Constant-time comparison
subtle = { workspace = true }

[dev-dependencies]
# Test utilities
tempfile = { workspace = true }
