[package]
edition = "2024"
name = "auth"
publish = false
rust-version = "1.85.0"
version = "0.1.0"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Password hashing
argon2 = { workspace = true }

# Random generation
rand = { workspace = true }

# Base64 encoding
base64 = { workspace = true }

# Base32 encoding for TOTP
base32 = "0.5"

# Secret handling
secrecy = { workspace = true }

# Constant-time comparison
subtle = { workspace = true }

# TOTP MFA
totp-rs = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Database
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }

# Logging
tracing = { workspace = true }

# Validation
validator = { workspace = true, features = ["derive"] }

# Internal dependencies
error = { path = "../error" }
entity = { path = "../entity" }
migration = { path = "../migration" }

# CUID generation
cuid2 = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
# Test utilities
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = { workspace = true }
