[package]
name = "cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# CLI framework
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5.65"

# Web framework
axum = { workspace = true }

# TLS support (for future HTTPS implementation)
rustls = "0.22"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# Logging
logging = { path = "../logging" }

# Error handling
error = { path = "../error" }
anyhow = { workspace = true }

# Migration
migration = { path = "../migration" }

# Server
server = { path = "../server" }

# Redis for token blacklisting
redis = { workspace = true }

# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
