[package]
name = "cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# CLI framework
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5.65"

# Web framework
axum = { workspace = true }

# HTTP support for TLS
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }

# TLS support (for HTTPS implementation)
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

# Logging
logging = { path = "../logging" }

# Error handling
error = { path = "../error" }
anyhow = { workspace = true }

# Migration
migration = { path = "../migration" }

# Server
server = { path = "../server" }

# Redis for token blacklisting
redis = { workspace = true }

# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
