[package]
name = "cli"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "cli"

[dependencies]
# CLI framework
clap = { version = "4.5.56", features = ["derive", "env"] }
clap_complete = "4.5.65"
dotenvy = "0.15.7"

# Web framework
axum = { workspace = true }

# HTTP support for TLS
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }

# TLS support (for HTTPS implementation)
rustls = { version = "0.23.36", features = ["ring"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14"

# Logging
logging = { path = "../logging" }

# Error handling
error = { path = "../error" }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Migration
migration = { path = "../migration" }

# Server
server = { path = "../server" }

# Tower for Service trait
tower = { workspace = true }
tower-service = "0.3.3"

# Redis for token blacklisting
redis = { workspace = true }

# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Internal crates
auth = { path = "../auth" }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.25.0"
