[package]
name = "error"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP types
axum = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tower = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Utilities
tracing = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }

[features]
default = []

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
