[package]
name = "logging"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Tracing and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }

# Async support
tokio = { workspace = true, features = ["sync"] }

# Configuration
serde = { workspace = true }
toml = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
blake3 = { workspace = true }
time = { version = "0.3.46", features = ["formatting", "parsing"] }

[dev-dependencies]
rstest = { workspace = true }
