[package]
name = "logging"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Tracing and logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = { workspace = true }

# Configuration
serde = { workspace = true }

# Utilities
cuid2 = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
