[package]
name = "migration"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Sea-ORM Migration
sea-orm-migration = { version = "2.0.0-rc.30", features = ["runtime-tokio-rustls"] }

# Workspace dependencies
sea-orm = { workspace = true}
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1.89"

# Logging
logging = { path = "../logging" }
tracing = { workspace = true }

# Error handling
error = { path = "../error", features = ["migration"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true, features = ["serde"] }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
sea-orm-migration = { version = "2.0.0-rc.30", features = ["runtime-tokio-native-tls"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
rstest = { workspace = true }
dotenvy = "0.15.7"
