[package]
edition      = "2024"
name         = "migration"
publish      = false
rust-version = "1.93.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread"] }
dotenvy = {version = "0.15.7", optional = true}
serde_json = "1.0.149"
sea-orm-migration = {workspace = true}

[features]
cli = ["dep:dotenvy"]

[[bin]]
name = "migration"
required-features = ["cli"]
